[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/rekka/meval-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator"]
license = "Unlicense/MIT"
name = "meval"
readme = "README.md"
repository = "https://github.com/rekka/meval-rs"
version = "0.2.0"
exclude = ["README.tpl", ".travis.yml"]

[dependencies]
fnv = "1.0.5"
nom = "5.0.0"

[dev-dependencies]
toml = "0.4.5"

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
